--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -25,6 +25,10 @@ permissions:
   contents: write
   pull-requests: write
 
+defaults:
+run:
+  shell: bash
+
 jobs:
   test:
     name: CI for Python
