--- a/composite/python/build-push-img/action.yml
+++ b/composite/python/build-push-img/action.yml
@@ -16,6 +16,7 @@ runs:
 
     - name: Build and push
       id: build_and_push_to_harbor
+      shell: bash
       run: |
         AUTH=$(echo -n robot\$ikusigh:${{ secrets.HARBOR_TOKEN }} | base64)
         cat << EOF > config.json
