--- a/composite/python/pip-install-dependencies/action.yml
+++ b/composite/python/pip-install-dependencies/action.yml
@@ -5,5 +5,6 @@ runs:
   using: "composite"
   steps:
     - name: install dependencies
+      shell: bash
       run: |
         pip install -r requirements.txt
