--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -67,3 +67,4 @@ jobs:
           registry_project: 'library'
           registry_repository: 'python-rag'
           python_version: ${{ inputs.python_version }}
+          harbor-token: ${{ secrets.HARBOR_TOKEN }}
