--- a/composite/python/download-dockerfile/action.yml
+++ b/composite/python/download-dockerfile/action.yml
@@ -18,6 +18,7 @@ runs:
   using: "composite"
   steps:
     - name: debug secrets
+      shell: bash
       run: |
         echo "IKSUI_PAT is set to ${{ inputs.ikusi-token }}"
 
