--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -37,7 +37,7 @@ jobs:
       - name: show secrets
         shell: bash
         run: |
-          echo "toekn is set to ${{ secrets.IKUSI_PAT }}"
+          echo "toekn is set to ${{ secrets.IKSUI_PAT }}"
 
       - name: Download Repo
         id: checkout
@@ -63,7 +63,7 @@ jobs:
         uses: ikusi-id-lite/devops-resources/composite/python/download-dockerfile@main
         with:
           exec-method: ${{ inputs.expose-method }}
-          ikusi-token: ${{ secrets.IKUSI_PAT }}
+          ikusi-token: ${{ secrets.IKSUI_PAT }}
 
       - name: build and push image
         id: build-and-push
