--- a/composite/python/build-push-img/action.yml
+++ b/composite/python/build-push-img/action.yml
@@ -40,23 +40,14 @@ runs:
     #        --destination 192.168.50.127:30002/${{ inputs.registry_project }}/${{ inputs.registry_repository }}:1
 
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    # 2. Login en Harbor (Mucho más seguro que generar el config.json a mano)
-    - name: Login to Harbor
-      uses: docker/login-action@v3
+    - name: Build and Push with Kaniko
+      uses: aevea/kaniko-action@v1.6.0
       with:
         registry: 192.168.50.127:30002
         username: "robot$ikusigh"
         password: ${{ inputs.harbor-token }}
-
-    # 3. Build and Push con la acción oficial (Sustituye a Kaniko en este contexto)
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: 192.168.50.127:30002/${{ inputs.registry_project }}/${{ inputs.registry_repository }}:1
-        # Si tu Harbor usa HTTP o certificado auto-firmado, puedes necesitar:
-        allow: network.host
+        image: ${{ inputs.registry_project }}/${{ inputs.registry_repository }}
+        tag: 1
+        cache: true
+        # Si tu Harbor es HTTP, añade esto:
+        extra_args: "--insecure --skip-tls-verify"
